# coding-practice

./: .gitignore  LICENSE  README.md  gitup.bat
c/基本算法/基本算法——其它/: 基本算法——其它.sln
c/基本算法/基本算法——其它/基本算法——其它/: 三元组中元素和为0.cpp  亲戚关系提问.cpp  反转字符串中单词顺序.cpp  基本算法——其它.vcxproj  基本算法——其它.vcxproj.filters
c/基本算法/基本算法——求值法/: 基本算法——求值法.sln
c/基本算法/基本算法——求值法/基本算法——求值法/: 一元二次方程求解.cpp  亲和数.cpp  公牛和母牛.cpp  十六进制的运算.cpp  基本算法——求值法.vcxproj  基本算法——求值法.vcxproj.filters  大整数求和问题.cpp  孪生素数.cpp  最大公约数.cpp  求三角形面积.cpp  求圆的周长.cpp  求年长者.cpp  求整数位数.cpp  求闰年（假闰年）.cpp  计算圆周率.cpp  连续自然数的平方和.cpp  阶乘求和.cpp
c/基本算法/基本算法——递归/: 基本算法——递归.sln
c/基本算法/基本算法——递归/基本算法——递归/: (重要！！！）递归取数.cpp  反转字符串.cpp  基本算法——递归.vcxproj  基本算法——递归.vcxproj.filters  最大值问题.cpp  母牛繁殖.cpp  求素数之积.cpp
c/基本算法/基本算法——递推法/: 基本算法——递推法.sln
c/基本算法/基本算法——递推法/基本算法——递推法/: 上楼梯.cpp  兔子繁殖.cpp  取数.cpp  基本算法——递推法.vcxproj  基本算法——递推法.vcxproj.filters  富二代的生活费.cpp  平面分割问题.cpp  开奖.cpp  斐波那契数列求和.cpp  方格涂色问题.cpp  月之数(非递推）.cpp  求天数.cpp  求年龄.cpp  洗牌.cpp  猴子吃桃.cpp  王小二的刀.cpp  穿越沙漠.cpp  绝不后退.cpp  蜜蜂回家.cpp  飞跃悬崖.cpp
c/基本算法/派生类/: 派生类.sln
c/基本算法/派生类/派生类/: FileName.cpp  dggag.cpp  homework.cpp  多态.cpp  派生类.vcxproj  派生类.vcxproj.filters
c/数据结构/1.顺序表/: 线性表.sln
c/数据结构/1.顺序表/线性表/: List.h  main.cpp  线性表.vcxproj  线性表.vcxproj.filters  线性表的顺序表示.cpp
c/数据结构/2.线性链表/: 线性链表.sln
c/数据结构/2.线性链表/线性链表/: LinkList.h  main.cpp  单链表.cpp  线性链表.vcxproj  线性链表.vcxproj.filters
c/数据结构/3.栈/: 栈.sln
c/数据结构/3.栈/栈/: SqStack.h  main.cpp  栈.vcxproj  栈.vcxproj.filters  栈的基本操作.cpp
c/数据结构/4.队列/: 队列.sln
c/数据结构/4.队列/队列/: SqQueue.h  main.cpp  队列.vcxproj  队列.vcxproj.filters  队列基本操作.cpp
c/数据结构/5.串/: 串.sln
c/数据结构/5.串/串/: HString.h  Index.h  KMP.h  main.cpp  串.vcxproj  串.vcxproj.filters  串的模式匹配.cpp  堆分配串的基本操作.cpp
c/数据结构/6.数组/: 数组.sln
c/数据结构/6.数组/数组/: Array.h  main.cpp  三元组的基本操作.cpp  数组.vcxproj  数组.vcxproj.filters
c/数据结构/7.树/: 7.树.sln
c/数据结构/7.树/7.树/: 7.树.vcxproj  7.树.vcxproj.filters  tree.h  二叉树的基本操作.cpp
c/数据结构/8.图/: 8.图.sln
c/数据结构/8.图/图/: 图.vcxproj
cpp/my-stl/: CMakeLists.txt  CMakePresets.json  memory.h  my-stl.cpp  my-stl.h  vector.h
frontend/入门网页练习/: 入门网页.html
java/leetcode-solutions/: README.md  pom.xml
java/leetcode-solutions/docs/: structure.md
java/leetcode-solutions/src/main/java/problems/_0001_两数之和/: Problem.md  Solution.java
java/leetcode-solutions/src/test/java/problems/_0001_两数之和/: SolutionTest.java
